# typolite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
src/: App.svelte  app.css  main.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  export.rs  file_service.rs  lib.rs  main.rs  parser.rs
src/lib/: Header.svelte  MarkdownView.svelte  Sidebar.svelte  stores.test.ts  stores.ts  types.ts
