[package]
name = "typolite"
version = "0.1.0"
description = "A fast, beautiful, cross-platform desktop Markdown viewer"
authors = ["Typora-Lite Contributors"]
license = "MIT"
repository = "https://github.com/your-org/typolite"
default-run = "typolite"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-write-file", "path-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize", "updater"] }
tokio = { version = "1.32", features = ["full"] }
notify = "6.1"
pulldown-cmark = { version = "0.9", features = ["simd"] }
katex = "0.4"
syntect = "5.1"
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
directories = "5.0"
html-escape = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "typolite"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[lib]
name = "typolite_lib"
crate-type = ["cdylib", "rlib"]
